Update the execute method to show errors, and apply same format to commands